ensure floated elements don't overflow the footer

--- a/assets/sass/theme/_footer.scss
+++ b/assets/sass/theme/_footer.scss
@@ -14,4 +14,10 @@
 
 	}
 
+	.site-info {
+
+		overflow: hidden;
+
+	}
+
 }
